--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "parser combinator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "author": "himanoa",
   "license": "MIT",
