--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "@himanoa/parser-combinator",
   "version": "0.0.1",
   "description": "parser combinator",
-  "scripts": {
-    "test": "vitest run",
-    "test:watch": "vitest"
-  },
   "author": "himanoa",
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "4.8.4",
-    "vitest": "0.23.4"
-  }
+  "license": "MIT"
 }
