Fix task name from build to release

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "test": "deno test",
-    "build": "deno run --allow-read --allow-env --allow-write --allow-net --allow-run scripts/build.ts",
+    "release": "deno run --allow-read --allow-env --allow-write --allow-net --allow-run scripts/build.ts",
     "lint": "deno lint mod.ts mod.test.ts",
     "fmt": "deno lint mod.ts mod.test.ts"
   }
