Fix a bug where mistake postion when skip and many combination

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "test": "deno test",
+    "test": "deno test mod.test.ts",
     "release": "deno run --allow-read --allow-env --allow-write --allow-net --allow-run scripts/build.ts",
     "lint": "deno lint mod.ts mod.test.ts",
     "fmt": "deno lint mod.ts mod.test.ts"
